# upset-altair-notebook

./: .gitignore  README.md  covid_upset.html  index.ipynb  index.py  pixi.toml  pyproject.toml  setup.py  simple_upset.html
altair_upset/: __init__.py  chart.py  components.py  config.py  display.py  original_function.py  selections.py  transforms.py  upset.py  upset_altair.py
examples/: covid_mutations.py  covid_symptoms.py  covid_variants.py  covid_variants_upset.html  upset_playground.py
tests/: conftest.py  test_covid_mutations.py  test_covid_symptoms.py  test_upset.py  test_upset_advanced.py  test_upset_basic.py  test_upset_customization.py
tests/test_data/: covid_variants_upset.json  sample.csv  sort_by_degree_covid_symptoms.json  sort_by_freq_covid_symptoms.json
tests/test_data/vega/: covid_symptoms_by_degree_vega.json  covid_symptoms_by_frequency_vega.json
