[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altair-upset"
version = "0.1.0"
description = "Create UpSet plots using Altair"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "altair>=5.0.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[tool.uv]
# Ensure package is treated as a Python package
package = true 