[project]
name = "altair-upset"
dynamic = ["version"]
description = "Create UpSet plots using Altair"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "altair>=5.0.0",
    "pandas>=1.0.0",
]

[dependency-groups]
dev = [
    "marimo",
    "ipykernel",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=altair_upset"

[tool.uv]
package = true 
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "altair_upset/__init__.py"